--- a/source/resources/views/ThreatMatrixView/MoreInfo.html
+++ b/source/resources/views/ThreatMatrixView/MoreInfo.html
@@ -97,8 +97,8 @@ Another early approach was developed by the Biodiversity Support Program. This s
   2003. <EM>Conventions for Defining, Naming, Measuring, Combining, and Mapping 
   Threats in Conservation: An Initial Proposal for a Standard 
   System.<BR></EM></FONT>&nbsp;&nbsp;&nbsp;&nbsp; <A 
-  href="http://www.fosonline.org/images/Documents/Conventions_for_Threats_in_Conservation.pdf"><FONT 
-  color=#0000ff>http://www.fosonline.org/images/Documents/Conventions_for_Threats_in_Conservation.pdf</FONT></A>&nbsp;</P></BLOCKQUOTE>
+  href="http://www.conservationmeasures.org/initiatives/threats-actions-taxonomies"><FONT 
+  color=#0000ff>http://www.conservationmeasures.org/initiatives/threats-actions-taxonomies</FONT></A>&nbsp;</P></BLOCKQUOTE>
 
 <P>Finally, a classification of direct threats can be found at:</P>
 <BLOCKQUOTE dir=ltr style="MARGIN-RIGHT: 0px">
