--- a/source/resources/views/SummaryView/MoreInfo.html
+++ b/source/resources/views/SummaryView/MoreInfo.html
@@ -49,7 +49,7 @@ of the latest version at:</P>
 <BLOCKQUOTE dir=ltr style="MARGIN-RIGHT: 0px">
   <P>CMP. 2008. Open Standards for the Practice of 
   Conservation, v 2.0.<BR>&nbsp;&nbsp;&nbsp;&nbsp; <A 
-  href="http://conservationmeasures.org/CMP/Site_Docs/CMP_Open_Standards_Version_2.0.pdf">http://conservationmeasures.org/CMP/Site_Docs/CMP_Open_Standards_Version_2.0.pdf</A></P></BLOCKQUOTE>
+  href="http://www.conservationmeasures.org/wp-content/uploads/2010/04/CMP_Open_Standards_Version_2.0.pdf">http://www.conservationmeasures.org/wp-content/uploads/2010/04/CMP_Open_Standards_Version_2.0.pdf</A></P></BLOCKQUOTE>
 
 <P>Many of the CMP members also have their own version of the standards as well as specific guidance materials for many of the steps as shown below.</P>
 <br>
