MRD-4034: partial fix,  more to come

--- a/source/resources/views/ThreatMatrixView/MoreInfo.html
+++ b/source/resources/views/ThreatMatrixView/MoreInfo.html
@@ -104,5 +104,5 @@ Another early approach was developed by the Biodiversity Support Program. This s
 <BLOCKQUOTE dir=ltr style="MARGIN-RIGHT: 0px">
   <P>IUCN - CMP. 2006. <EM>Unified Classification of Direct Threats. Version 
   1.0.<BR></EM></FONT>&nbsp;&nbsp;&nbsp;&nbsp; <A 
-  href="http://conservationmeasures.org/CMP/IUCN/Site_Page.cfm"><U><FONT 
-  color=#0000ff>http://conservationmeasures.org/CMP/IUCN/Site_Page.cfm</U></FONT></A></P></BLOCKQUOTE></BODY></HTML>
+  href="http://www.conservationmeasures.org/initiatives/threats-actions-taxonomies/threats-taxonomy"><U><FONT 
+  color=#0000ff>http://www.conservationmeasures.org/initiatives/threats-actions-taxonomies/threats-taxonomy</U></FONT></A></P></BLOCKQUOTE></BODY></HTML>
